--- a/www/css/delovoy_styles.css
+++ b/www/css/delovoy_styles.css
@@ -1253,6 +1253,290 @@ html {
 	margin-bottom: 40px;
 }
 
+/* virtual offices details styles */
+
+.vd_serviceincenter_wrapper-virtualrates {
+	margin: 80px auto 0px auto;
+    width: 100%;
+    overflow: auto;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-header {
+	margin-bottom: 2px;
+}
+
+.vd_serviceincenter_wrapper-virtualrates table {
+	width: 100%;
+	
+}
+
+.vd_serviceincenter_wrapper-virtualrates table tr.table_header {
+	background-color: #edecf5;
+	height: 90px;
+	vertical-align: top;
+}
+
+.vd_serviceincenter_wrapper-virtualrates table th {
+/* 	font-family: Lato-Black; */
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 1.5;
+	color: #000000;
+    padding-top: 15px;
+    width: 252px;
+    text-align: left;
+    padding-left: 10px;
+}
+
+.vd_serviceincenter_wrapper-virtualrates table th.label {
+	font-size: 16px;
+	width: auto;
+}
+
+.vd_serviceincenter_wrapper-virtualrates table tr.prices {
+/* 	font-family: Lato-Regular; */
+	font-size: 20px;
+	text-align: center;
+	height: 70px;
+}
+
+.vd_serviceincenter_wrapper-virtualrates table tr.prices span {
+	font-weight: 700;
+}
+
+.vd_serviceincenter_wrapper-virtualrates table tr.prices span {
+	font-weight: 700;
+}
+
+.vd_serviceincenter_wrapper-virtualrates table tr.reverse_buttons td {
+	padding-left: 10px;
+	height: 60px;
+}
+
+.vd_serviceincenter_wrapper-virtualrates table span.reserve {
+	display: block;
+	background-color: #812384;
+	height: 100%;
+	width: 100%;
+	color: #ffffff;
+	line-height: 60px;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.vd_serviceincenter_wrapper-virtualrates table span.reserve.reserved {
+	background-color: #b37bb5;
+}
+
+.vd_serviceincenter_wrapper-virtualrates table span.reserve.active {
+	background-color: #d1bad2;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form {
+	background-color: #fafafc;	
+	padding: 30px;
+    float: left;
+    width: 100%;	
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form h2 {
+	margin-top: 10px;
+/* 	font-family: Lato-Bold; */
+	font-weight: 600;
+	font-size: 30px;
+	line-height: 1.3;
+	color: #000000;	
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-left {
+	width: 394px;
+    float: left;	
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-left-item {
+	width: 100%;
+	float: left;
+	font-size: 16px;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-left-item-label {
+	width: 170px;
+	height: 40px;
+	line-height: 40px;
+	float: left;
+	color: #010101;
+/* 	font-family: Lato-Regular; */
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-left-item-value {
+	width: 224px;
+	float: left;
+	line-height: 40px;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-left-total {
+	margin-top: 20px;
+	width: 100%;
+	float: left;
+	border-top: 1px solid #d1d1e0;
+	border-bottom: 1px solid #d1d1e0;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-left-total-label {
+	width: 170px;
+	height: 40px;
+	line-height: 40px;
+	float: left;
+	color: #010101;
+	font-size: 20px;
+/* 	font-family: Lato-Regular; */
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-left-total-value {
+	line-height: 40px;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-left-total-value span {
+	font-weight: 700;
+	font-size: 20px;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-rigth {
+	width: 716px;
+    float: right;	
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-rigth input {
+	margin-right: 10px;
+	float: left;
+	width: 232px;
+	height: 40px;
+	border-radius: 1px;
+	background-color: #ffffff;
+	border: solid 2px #dadae6;
+/* 	font-family: Lato-Regular; */
+	font-size: 16px;
+	line-height: 1.5;
+	color: #595964;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-rigth input:focus {
+	box-shadow: 0px 0px 0px 2px #4ea6fe;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-rigth input.error {
+	box-shadow: 0px 0px 0px 2px #cf2553;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-rigth input.phone {
+	background-image: url('../images/input_phone.png');
+    background-repeat: no-repeat;
+    background-position: 17px 8px;
+    padding-left: 40px;
+/*     font-family: Lato-Regular; */
+    font-size: 16px;
+    line-height: 1.5;
+    color: #595964;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-rigth input.email {
+	background-image: url('../images/input_email.png');
+    background-repeat: no-repeat;
+    background-position: 17px 8px;
+    padding-left: 40px;
+/*     font-family: Lato-Regular; */
+    font-size: 16px;
+    line-height: 1.5;
+    color: #595964;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-rigth input.name {
+	margin-right: 0px;
+	background-image: url('../images/svg/input_name.svg');
+    background-repeat: no-repeat;
+    background-position: 18px 11px;
+    padding-left: 40px;
+/*     font-family: Lato-Regular; */
+    font-size: 16px;
+    line-height: 1.5;
+    color: #595964;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-rigth textarea {
+	height: 100px;
+	width: 100%;
+	margin-top: 20px;
+	margin-bottom: 30px;
+	padding: 5px 5px 5px 50px;
+	float: left;
+	border-radius: 1px;
+	background-color: #ffffff;
+	border: solid 2px #dadae6;
+	background-image: url('../images/fake_message_icon.png');
+    background-size: 24px 24px;
+    background-repeat: no-repeat;
+    background-position: 11px 6px;
+    resize: none;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-rigth textarea:focus {
+	box-shadow: 0px 0px 0px 2px #4ea6fe;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-rigth textarea.error {
+	box-shadow: 0px 0px 0px 2px #cf2553;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-rigth button {
+	height: 60px;
+	width: 353px;
+	float: left;
+	border: none;
+	padding: 0px;
+	background-color: #812384;
+	color: #ffffff;
+	text-align: center;
+	line-height: 60px;
+	text-transform: uppercase;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-rigth button.disabled {
+	background-color: #ababc6;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-rigth button:nth-child(even) {
+	margin-left: 10px;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-left .ui-selectmenu-button {
+	vertical-align: bottom;
+	height: 40px;
+	width: 224px !important;
+	border-radius: 1px;
+    background-color: #ffffff;
+    border: solid 2px #dadae6;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-left .ui-selectmenu-button .ui-selectmenu-text {
+    padding-top: 8px;
+/*     font-family: Lato-Regular; */
+	font-size: 16px;
+	line-height: 1.5;
+	color: #010101;
+    background-image: url('../images/fake-time-icon.png');
+    background-size: 23px 23px;
+    background-repeat: no-repeat;
+    background-position: 190px 6px;
+}
+
+.vd_serviceincenter_wrapper-virtualrates-list-form-left .ui-selectmenu-button.ui-state-focus {
+	box-shadow: 0px 0px 0px 2px #4ea6fe;
+}
+
+/* */
+
 .vd_serviceincenter_wrapper-freeoffices {
 	margin: 80px auto 0px auto;
     width: 100%;
