--- a/www/css/delovoy_styles.css
+++ b/www/css/delovoy_styles.css
@@ -1253,6 +1253,462 @@ html {
 	margin-bottom: 40px;
 }
 
+/* meeting rooms detals styles */
+
+.vd_serviceincenter_wrapper-meetingrates {
+	margin: 80px auto 0px auto;
+    width: 100%;
+    overflow: auto;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-header {
+	height: 101px;
+	background-color: #fafafc;
+}
+
+.open .vd_serviceincenter_wrapper-meetingrates-list-item-header {
+	background-color: #edecf5;
+	border-bottom: 1px solid #ffffff;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-header-photo {
+	float: left;
+	width: 175px;
+	height: 100px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-header-name {
+	float: left;
+	width: 165px;
+	height: 100px;
+	border-right: 2px solid #ffffff;
+/* 	font-family: Lato-Black; */
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 1.5;
+	color: #000000;
+	padding: 0 30px;
+	display: table;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-header-name span {
+	display: table-cell;
+	vertical-align: middle;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-header-area {
+	float: left;
+	width: 155px;
+	height: 101px;
+	border-right: 2px solid #ffffff;
+	line-height: 101px;
+/* 	font-family: Lato-Regular; */
+	font-size: 16px;
+	color: #010101;
+	padding-left: 70px;
+	background-image: url('../images/svg/icon-office-black.svg');
+    background-size: 24px 24px;
+    background-repeat: no-repeat;
+    background-position: 30px 36px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-header-people {
+	float: left;
+	width: 202px;
+	height: 101px;
+	border-right: 2px solid #ffffff;
+	line-height: 101px;
+/* 	font-family: Lato-Regular; */
+	font-size: 16px;
+	color: #010101;
+	padding-left: 70px;
+	background-image: url('../images/number_of_people_closed.png');
+    background-size: 32px 32px;
+    background-repeat: no-repeat;
+    background-position: 30px 36px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-header-price {
+    float: left;
+    width: 503px;
+    height: 100px;
+    line-height: 101px;
+    padding-left: 30px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-header-price button {
+	height: 60px;
+	width: 205px;
+	border: none;
+	background-color: #86bf37;
+	float: right;
+    margin-top: 20px;
+    text-transform: uppercase;
+    color: #ffffff;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-header-price button.active {
+	background-color: #ccdfb6;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-header-price span {
+/* 	font-family: Lato-Black; */
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 1.5;
+	color: #000000;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form {
+	background-color: #fafafc;
+	padding-top: 30px;
+	float: left;
+    width: 100%;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-right {
+	float: right;
+	width: 716px;
+	margin-right: 30px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-right input {
+	margin-right: 10px;
+	float: left;
+	width: 232px;
+	height: 40px;
+	border-radius: 1px;
+	background-color: #ffffff;
+	border: solid 2px #dadae6;
+/* 	font-family: Lato-Regular; */
+	font-size: 16px;
+	line-height: 1.5;
+	color: #595964;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-right input:focus {
+	box-shadow: 0px 0px 0px 2px #4ea6fe;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left input:focus {
+	box-shadow: 0px 0px 0px 2px #4ea6fe;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-right input.error {
+	box-shadow: 0px 0px 0px 2px #cf2553;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-right input.phone {
+	background-image: url('../images/input_phone.png');
+    background-repeat: no-repeat;
+    background-position: 17px 8px;
+    padding-left: 40px;
+/*     font-family: Lato-Regular; */
+    font-size: 16px;
+    line-height: 1.5;
+    color: #595964;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-right input.email {
+	background-image: url('../images/input_email.png');
+    background-repeat: no-repeat;
+    background-position: 17px 8px;
+    padding-left: 40px;
+/*     font-family: Lato-Regular; */
+    font-size: 16px;
+    line-height: 1.5;
+    color: #595964;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-right input.name {
+	margin-right: 0px;
+	background-image: url('../images/svg/input_name.svg');
+    background-repeat: no-repeat;
+    background-position: 18px 11px;
+    padding-left: 40px;
+/*     font-family: Lato-Regular; */
+    font-size: 16px;
+    line-height: 1.5;
+    color: #595964;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-right textarea {
+	height: 100px;
+	width: 100%;
+	margin-top: 20px;
+	margin-bottom: 30px;
+	padding: 5px 5px 5px 50px;
+	float: left;
+	border-radius: 1px;
+	background-color: #ffffff;
+	border: solid 2px #dadae6;
+	background-image: url('../images/fake_message_icon.png');
+    background-size: 24px 24px;
+    background-repeat: no-repeat;
+    background-position: 11px 6px;
+    resize: none;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-right textarea:focus {
+	box-shadow: 0px 0px 0px 2px #4ea6fe;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-right textarea.error {
+	box-shadow: 0px 0px 0px 2px #cf2553;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-right button {
+	height: 60px;
+	width: 353px;
+	float: left;
+	border: none;
+	padding: 0px;
+	background-color: #86bf37;
+	color: #ffffff;
+	text-align: center;
+	line-height: 60px;
+	text-transform: uppercase;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-right button.disabled {
+	background-color: #ababc6;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-right button:nth-child(even) {
+	margin-left: 10px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left .ui-selectmenu-button {
+	vertical-align: bottom;
+	height: 40px;
+	width: 85px !important;
+	border-radius: 1px;
+    background-color: #ffffff;
+    border: solid 2px #dadae6;
+    margin-right: 20px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left .ui-selectmenu-button:nth-of-type(even) {
+	width: 105px !important;
+	margin-right: 0px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left .ui-selectmenu-button .ui-selectmenu-text {
+    padding-top: 8px;
+    padding-left: 10px;
+    padding-right: 10px;
+/*     font-family: Lato-Regular; */
+	font-size: 16px;
+	line-height: 1.5;
+	color: #010101;
+    background-image: url('../images/fake-time-icon.png');
+    background-size: 23px 23px;
+    background-repeat: no-repeat;
+    background-position: 55px 6px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left .ui-selectmenu-button:nth-of-type(even) .ui-selectmenu-text {
+	background-position: 75px 6px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left .ui-selectmenu-button.ui-state-focus {
+	box-shadow: 0px 0px 0px 2px #4ea6fe;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left .date {
+	height: 40px;
+	border-radius: 1px;
+	background-color: #ffffff;
+	border: solid 2px #dadae6;
+	padding-left: 10px;
+    width: 155px;
+    background-image: url('../images/fake_date_icon.png');
+    background-size: 23px 23px;
+    background-repeat: no-repeat;
+    background-position: 9px 7px;
+    padding-left: 38px;
+    margin-right: 20px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left .preview {
+	display: none;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left .additionalservice_label {
+	position: relative;
+	padding-left: 30px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left .additionalservice_label span {
+	position: absolute;
+    width: 20px;
+    height: 16px;
+    background-image: url('../images/checkbox_blue.png');
+    background-size: 16px 16px;
+    background-repeat: no-repeat;
+    top: 4px;
+    left: 0px;
+    cursor: pointer;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left .additionalservice {
+	display: none;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left .additionalservice:checked + span {
+	content: url(../images/svg/check-white.svg);
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left {
+	float: left;
+	width: 386px;
+	margin-left: 30px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form h2 {
+/* 	font-family: Lato-Bold; */
+	font-weight: 600;
+	font-size: 30px;
+	line-height: 1.3;
+	color: #000000;	
+	padding-left: 30px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left {
+	width: 394px;
+    float: left;	
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left-item {
+	width: 100%;
+	float: left;
+	font-size: 16px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left-item-label {
+	width: 178px;
+	height: 24px;
+	line-height: 24px;
+	float: left;
+	color: #010101;
+/* 	font-family: Lato-Regular; */
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left-item-value {
+	width: 216px;
+	float: left;
+	line-height: 24px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left-item-wide {
+	width: 394px;
+	float: left;
+	height: 24px;
+	line-height: 24px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left-item-widetall {
+	width: 394px;
+	float: left;
+	height: 48px;
+	line-height: 48px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left-item-widecontrols {
+	width: 394px;
+	float: left;
+	height: 42px;
+	margin-top: 6px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left-total {
+	margin-top: 20px;
+	width: 100%;
+	float: left;
+	border-top: 1px solid #d1d1e0;
+	border-bottom: 1px solid #d1d1e0;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left-total-label {
+	width: 170px;
+	height: 40px;
+	line-height: 40px;
+	float: left;
+	color: #010101;
+	font-size: 20px;
+/* 	font-family: Lato-Regular; */
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left-total-value {
+	line-height: 40px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left-total-value span {
+	font-weight: 700;
+	font-size: 20px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-bottom {
+	float: left;
+	width: 100%;
+	background-color: #f0f0f5;
+	padding: 30px;
+/* 	font-family: Lato-Regular; */
+	font-size: 16px;
+	line-height: 1.5;
+	color: #010101;	
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-bottom-left {
+	float: left;
+	width: 394px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-bottom-right {
+	float: right;
+	width: 716px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-bottom-right .info {
+	float: left;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-bottom-right .warning {
+	float: right;
+	width: 470px;
+	position: relative;
+	padding-left: 45px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-bottom-right .warning:before {
+	content: '!';
+	height: 24px;
+	width: 24px;
+	background-color: #e62e66;
+	color: #ffffff;
+	text-align: center;
+	line-height: 24px;
+	position: absolute;
+    left: 0px;
+	font-style: normal;
+	border-radius: 50%;
+	font-size: 20px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-bottom p.subheading {
+/* 	font-family: Lato-Black; */
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.5;
+	color: #010101;	
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-bottom p span {
+	font-weight: 700;
+}
+
 /* virtual offices details styles */
 
 .vd_serviceincenter_wrapper-virtualrates {
