--- a/www/css/delovoy_styles.css
+++ b/www/css/delovoy_styles.css
@@ -1253,7 +1253,316 @@ html {
 	margin-bottom: 40px;
 }
 
-/* meeting rooms detals styles */
+/* coworking details styles */
+
+.vd_serviceincenter_wrapper-coworkingrates {
+	margin: 80px auto 0px auto;
+    width: 100%;
+    overflow: auto;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item {
+    width: 100%;
+	float: left;
+	position: relative;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item.open:after {
+	position: absolute;
+	content: '';
+	height: 3px;
+	background-color: #ababc6;
+	left: -1px;
+	right: -1px;
+	bottom: 0px;
+	border-top: 2px solid #ffffff;;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-header {
+	min-height: 101px;
+	height: auto;
+	background-color: #f7f8f9;
+	float: left;
+    width: 100%;
+    display: table;
+}
+
+.open .vd_serviceincenter_wrapper-coworkingrates-list-item-header {
+	background-color: #edecf5;
+	border-bottom: 1px solid #ffffff;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-header-name {
+	width: 175px;
+	height: 100%;
+	border-right: 2px solid #ffffff;
+/* 	font-family: Lato-Black; */
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 1.5;
+	color: #000000;
+	padding: 30px 20px;
+	display: table-cell;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-header-features {
+    width: 582px;
+    border-right: 2px solid #ffffff;
+    /* font-family: Lato-Regular; */
+    font-size: 20px;
+    color: #010101;
+    padding: 30px 20px;
+    display: table-cell;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-header-features li {
+	line-height: 26px;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-header-price {
+	display: table-cell;
+	/* font-family: Lato-Regular; */
+    font-size: 20px;
+    padding: 30px 0px 30px 20px;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-header-price span {
+/* 	font-family: Lato-Black; */
+	font-weight: 700;
+	font-size: 30px;
+	color: #000000;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-header-price button {
+	width: 205px;
+	height: 60px;
+	background-color: #009cdf;
+	color: #ffffff;
+/* 	font-family: Lato-Bold; */
+	font-weight: 600;
+	font-size: 14px;
+	border: none;
+	float: right;
+    text-transform: uppercase;
+    background-image: url('../images/svg/arrow-small.svg');
+    background-repeat: no-repeat;
+    background-position: 160px center;
+    padding-right: 40px; 
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form {
+	display: none;
+	background-color: #fafafc;
+    padding-top: 30px;
+	padding-bottom: 30px;
+    float: left;
+    width: 100%;
+	border-top: 1px solid #ffffff;
+}
+
+.open .vd_serviceincenter_wrapper-coworkingrates-list-item-form {
+	display: block;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form h2 {
+	/* font-family: Lato-Bold; */
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 1.3;
+    color: #000000;
+    padding-left: 30px;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-right {
+    float: right;
+    width: 716px;
+    margin-right: 30px;	
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-right input {
+	margin-right: 10px;
+	float: left;
+	width: 232px;
+	height: 40px;
+	border-radius: 1px;
+	background-color: #ffffff;
+	border: solid 2px #dadae6;
+/* 	font-family: Lato-Regular; */
+	font-size: 16px;
+	line-height: 1.5;
+	color: #595964;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-right input:focus {
+	box-shadow: 0px 0px 0px 2px #4ea6fe;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-left input:focus {
+	box-shadow: 0px 0px 0px 2px #4ea6fe;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-right input.error {
+	box-shadow: 0px 0px 0px 2px #cf2553;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-right input.phone {
+	background-image: url('../images/input_phone.png');
+    background-repeat: no-repeat;
+    background-position: 17px 8px;
+    padding-left: 40px;
+/*     font-family: Lato-Regular; */
+    font-size: 16px;
+    line-height: 1.5;
+    color: #595964;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-right input.email {
+	background-image: url('../images/input_email.png');
+    background-repeat: no-repeat;
+    background-position: 17px 8px;
+    padding-left: 40px;
+/*     font-family: Lato-Regular; */
+    font-size: 16px;
+    line-height: 1.5;
+    color: #595964;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-right input.name {
+	margin-right: 0px;
+	background-image: url('../images/svg/input_name.svg');
+    background-repeat: no-repeat;
+    background-position: 18px 11px;
+    padding-left: 40px;
+/*     font-family: Lato-Regular; */
+    font-size: 16px;
+    line-height: 1.5;
+    color: #595964;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-right textarea {
+	height: 100px;
+	width: 100%;
+	margin-top: 20px;
+	margin-bottom: 30px;
+	padding: 5px 5px 5px 50px;
+	float: left;
+	border-radius: 1px;
+	background-color: #ffffff;
+	border: solid 2px #dadae6;
+	background-image: url('../images/fake_message_icon.png');
+    background-size: 24px 24px;
+    background-repeat: no-repeat;
+    background-position: 11px 6px;
+    resize: none;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-right textarea:focus {
+	box-shadow: 0px 0px 0px 2px #4ea6fe;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-right textarea.error {
+	box-shadow: 0px 0px 0px 2px #cf2553;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-right button {
+	height: 60px;
+	width: 353px;
+	float: left;
+	border: none;
+	padding: 0px;
+	background-color: #0092da;
+	color: #ffffff;
+	text-align: center;
+	line-height: 60px;
+	text-transform: uppercase;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-right button.disabled {
+	background-color: #ababc6;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-right button:nth-child(even) {
+	margin-left: 10px;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-left {
+	width: 394px;
+    float: left;
+    margin-left: 30px;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-left-item {
+    width: 100%;
+    float: left;
+    font-size: 16px;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-left-item-label {
+    width: 178px;
+    height: 24px;
+    line-height: 24px;
+    float: left;
+    color: #010101;
+    /* font-family: Lato-Regular; */
+}
+
+.input .vd_serviceincenter_wrapper-coworkingrates-list-item-form-left-item-label {
+    width: 178px;
+    height: 40px;
+    line-height: 40px;
+    float: left;
+    color: #010101;
+    /* font-family: Lato-Regular; */
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-left-item-value {
+    width: 216px;
+    float: left;
+    line-height: 24px;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-left-item-value .coworking_workplaces {
+	background-color: #ffffff;
+    border: solid 2px #dadae6;
+    height: 40px;
+    width: 52px;
+    /* font-family: Lato-Regular; */
+    font-size: 16px;
+    line-height: 40px;
+    color: #595964;
+    text-align: center;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-left-total {
+    margin-top: 20px;
+    width: 100%;
+    float: left;
+    border-top: 1px solid #d1d1e0;
+    border-bottom: 1px solid #d1d1e0;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-left-total-label {
+    width: 170px;
+    height: 40px;
+    line-height: 40px;
+    float: left;
+    color: #010101;
+    font-size: 20px;
+    /* font-family: Lato-Regular; */
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-left-total-value {
+    line-height: 40px;
+}
+
+.vd_serviceincenter_wrapper-coworkingrates-list-item-form-left-total-value span {
+    font-weight: 700;
+    font-size: 20px;
+}
+
+/* meeting rooms details styles */
 
 .vd_serviceincenter_wrapper-meetingrates {
 	margin: 80px auto 0px auto;
